--- a/index.html
+++ b/index.html
@@ -5,8 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avatar VanillaJS</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Women in Tech</h1>
+    <div id="app">
+    </div>
+
+    <script>
+        const app = document.getElementById("app"); 
+
+        const Avatar = params => {
+            const src = `https://randomuser.me/api/portraits/women/${params.id}.jpg`;
+            return `
+            <picture>
+                <img src="${src}"/> 
+                <h3>${params.name}<h3>
+            </picture> `
+        }
+
+        app.innerHTML += Avatar({id: 5, name: "María"});
+        app.innerHTML += Avatar({id: 6, name: "Sonia"});
+        
+        app.querySelectorAll("img").forEach(img=>{
+            img.addEventListener("click", ()=>{
+                img.classList.toggle("disabled");
+            })
+        });  
+    </script>
 </body>
 </html>
